feat(i18n): internationalize all pages and components - Replace hardcoded French text with t() calls - Add translation keys for careers, testimonials, contact pages - Update Hero, Features, Testimonials components - Update TopInfoBar, FloatingCTA components - Update company pages (MPEB, EGI, FREM, MGP) - Add SEO translation keys for home page

--- a/src/i18n/locales/ar/careers.json
+++ b/src/i18n/locales/ar/careers.json
@@ -2,7 +2,69 @@
   "title": "الوظائف - LLEDO Industries",
   "description": "انضموا إلى فريق LLEDO Industries وشاركوا في الابتكار في أدوات الطيران. اكتشفوا فرص العمل لدينا.",
   "hero": {
+    "badge": "انضم إلى المغامرة",
     "title": "الوظائف في LLEDO Industries",
     "subtitle": "انضموا إلى فريق شغوف وشاركوا في الابتكار في أدوات الطيران ومعدات GSE."
+  },
+  "stats": {
+    "expertise": { "value": "الخبرة", "label": "معرفة معترف بها" },
+    "team": { "value": "الفريق", "label": "متعاونون ملتزمون" },
+    "quality": { "value": "الجودة", "label": "التميز التشغيلي" },
+    "evolution": { "value": "التطور", "label": "فرص المسار المهني" }
+  },
+  "apply": {
+    "title": "هل أنت مستعد للانضمام إلينا؟",
+    "subtitle": "تقدم بنقرات قليلة أو تواصل مع فريق الموارد البشرية",
+    "submitApplication": "إرسال طلبي",
+    "contactTeam": "التواصل مع الفريق",
+    "viewOffers": "عرض العروض",
+    "applicationSent": "تم إرسال الطلب!",
+    "applicationSentMessage": "سنتواصل معك قريبًا.",
+    "quickApplication": "طلب سريع",
+    "yourName": "اسمك الكامل",
+    "yourEmail": "بريدك الإلكتروني",
+    "desiredPosition": "المنصب المطلوب",
+    "spontaneousApplication": "طلب تلقائي",
+    "yourMessage": "رسالتك (الدافع، التوفر...)",
+    "attachCV": "إرفاق سيرتك الذاتية (PDF, DOC)",
+    "sending": "جاري الإرسال...",
+    "sendApplication": "إرسال طلبي",
+    "error": "حدث خطأ. يرجى المحاولة مرة أخرى."
+  },
+  "culture": {
+    "badge": "ثقافتنا",
+    "title": "ثقافة شركتنا",
+    "subtitle": "انضم إلى فريق شغوف بالتميز والابتكار في قطاع الطيران",
+    "items": [
+      { "title": "الابتكار", "description": "نشجع الإبداع والابتكار لتطوير حلول تقنية متطورة." },
+      { "title": "الفريق", "description": "نعمل معًا في بيئة تعاونية وداعمة." },
+      { "title": "الجودة", "description": "نلتزم بالتميز والجودة في جميع مشاريعنا." },
+      { "title": "التدريب", "description": "نستثمر في تدريب وتطوير موظفينا." }
+    ]
+  },
+  "benefits": {
+    "badge": "المزايا",
+    "title": "مزايانا",
+    "subtitle": "ظروف عمل مثالية لتطورك المهني",
+    "list": [
+      "تأمين صحي للشركة",
+      "ضمان اجتماعي",
+      "قسائم طعام",
+      "تدريب مستمر",
+      "بيئة عمل مريحة",
+      "جو ودي"
+    ]
+  },
+  "jobs": {
+    "badge": "عروض العمل",
+    "title": "الوظائف المتاحة",
+    "subtitle": "اكتشف فرص العمل لدينا واعثر على الوظيفة المناسبة لك",
+    "loading": "جاري تحميل العروض...",
+    "noOffers": "لا توجد عروض متاحة حاليًا"
+  },
+  "contact": {
+    "title": "طلب تلقائي",
+    "subtitle": "لم تجد الوظيفة المناسبة؟ أرسل لنا طلبك التلقائي.",
+    "contactUs": "تواصل معنا"
   }
 }
