--- a/src/i18n/locales/ar/contact.json
+++ b/src/i18n/locales/ar/contact.json
@@ -6,7 +6,8 @@
     "subtitle": "فريق خبرائنا تحت تصرفكم للإجابة على أسئلتكم ومرافقتكم في مشاريعكم."
   },
   "form": {
-    "title": "تواصل مع فريقنا"
+    "title": "تواصل مع فريقنا",
+    "subtitle": "املأ هذا النموذج وسيتواصل معك فريقنا في أقرب وقت ممكن."
   },
   "info": {
     "title": "معلومات الاتصال",
@@ -18,7 +19,7 @@
     "email": {
       "label": "البريد الإلكتروني",
       "value": "contact@mpeb13.com",
-      "response": "نرد بسرعة في أيام العمل"
+      "response": "رد مضمون خلال 24 ساعة في أيام العمل"
     },
     "address": {
       "label": "العنوان",
@@ -29,10 +30,33 @@
   },
   "hours": {
     "title": "ساعات العمل",
-    "weekdays": "الإثنين - الجمعة: 8:00 - 18:00 بتوقيت وسط أوروبا",
-    "weekend": "السبت - الأحد: مغلق"
+    "weekdays": "الإثنين - الجمعة: 8:00 - 18:00",
+    "saturday": "السبت: مغلق",
+    "sunday": "الأحد: مغلق"
+  },
+  "actions": {
+    "viewOnMap": "عرض على الخريطة",
+    "callNow": "اتصل الآن",
+    "sendEmail": "إرسال بريد إلكتروني",
+    "openGoogleMaps": "فتح في خرائط جوجل",
+    "learnMore": "اعرف المزيد"
+  },
+  "companies": {
+    "title": "شركات مجموعتنا",
+    "subtitle": "تواصل مباشرة مع الشركة التي تناسب احتياجاتك",
+    "mpeb": "التصنيع الدقيق",
+    "egi": "مكتب الهندسة",
+    "frem": "الصيانة الصناعية",
+    "mgp": "الصفائح والغلايات"
   },
   "map": {
-    "title": "الموقع"
+    "badge": "اعثر علينا",
+    "title": "موقعنا"
+  },
+  "cta": {
+    "title": "هل تحتاج إلى كتيبنا التجاري؟",
+    "subtitle": "قم بتنزيل وثائقنا الكاملة لاكتشاف جميع قدراتنا.",
+    "downloadPdf": "تنزيل الكتيب PDF",
+    "discoverExpertises": "اكتشف خبراتنا"
   }
 }
