--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -1,4 +1,9 @@
 {
+  "topBar": {
+    "products": "Aerotools Products",
+    "recruitment": "Careers",
+    "brochure": "PDF Brochure"
+  },
   "nav": {
     "home": "Home",
     "expertises": "LLEDO Group",
@@ -18,7 +23,16 @@
     "headlineAccent": "integrated industrial group",
     "subheadline": "Engineering, precision machining and industrial maintenance for aerospace and defense since 1989. A collective of experts bringing together MPEB, EGI, FREM and MGP to manage your projects end-to-end.",
     "ctaPrimary": "Contact Us",
-    "ctaSecondary": "Discover Our Companies",
+    "ctaSecondary": "Discover our companies",
+    "discoverEntities": "Discover our entities",
+    "discover": "Discover",
+    "scroll": "Scroll",
+    "companies": {
+      "mpeb": { "desc": "Precision machining", "detail": "Unit parts manufacturing" },
+      "egi": { "desc": "Engineering office", "detail": "Integrated engineering" },
+      "frem": { "desc": "Maintenance", "detail": "Responsiveness and interchangeability" },
+      "mgp": { "desc": "Sheet metal & boilermaking", "detail": "3 to 5 axis machining" }
+    },
     "badges": {
       "compliance": "Tooling manufacturing and industrial integration",
       "experience": "Component interchangeability",
@@ -175,6 +189,33 @@
     "emailCannotBeChanged": "Email cannot be changed",
     "saving": "Saving...",
     "saveChanges": "Save changes"
+  },
+  "contactForm": {
+    "subject": "Subject",
+    "selectSubject": "Select a subject",
+    "subjects": {
+      "contact": "Contact request",
+      "information": "Information request",
+      "support": "Technical support",
+      "partnership": "Partnership",
+      "other": "Other"
+    },
+    "message": "Message",
+    "messagePlaceholder": "Describe your project or request...",
+    "consent": "I agree that my data will be used to process my request in accordance with the",
+    "privacyPolicy": "privacy policy",
+    "sending": "Sending...",
+    "submit": "Send request",
+    "success": "Your message has been sent. Thank you, we will get back to you within 24 hours.",
+    "error": "An error occurred. Please try again or contact us by phone.",
+    "errors": {
+      "firstNameRequired": "First name is required",
+      "lastNameRequired": "Last name is required",
+      "emailInvalid": "Invalid email",
+      "subjectRequired": "Subject is required",
+      "messageMinLength": "Message must be at least 10 characters",
+      "consentRequired": "You must accept the privacy policy"
+    }
   },
   "admin": {
     "panel": "Administration Panel",
